--- a/file.css
+++ b/file.css
@@ -4,34 +4,93 @@
     box-sizing:border-box;
 }
  
+/* header */
 header{
-    background-image: url("/img/pattern.png");
+    height: 100px;
+    background-image: url("../img/pattern.png");
     background-color: lightskyblue;
-    background-size: cover;
-    background-position: bottom;
-    }
+    background-size: 30%;
+      }
 
 .logo {
-    width: 150px;
-}
+        height: 50px;
+        margin-top: 40px;
+      }
+
+/* main */
+h1{
+  font-size:38px;
+  line-height: 40px;
+  }
 
 .grigio {
     color : grey;
-}
+        }
 
 .blu {
     color :lightskyblue;
-}
+     }
 
+.foto{
+    margin:20px 0;
+     }
+
+.didascalia{
+         font-size:12px;
+           }
 .giallo {
     background-color: yellow;
+        }
+
+ul{
+  margin: 20px;
+  }
+
+/* table */
+table{
+    text-align:left;
+    border-collapse: collapse;
+    margin: 20px 0px;
+      }
+
+thead{
+    background-color: lightsteelblue;
+    color:white;
+     }
+
+.dispari {
+        background-color: lightskyblue;
+         }
+
+.testo{
+    width: 50%;
+      }
+
+/* footer */
+
+footer {
+        margin: 40px 0px;
 }
 
-.colore-intestazione{
-    color : white;
-    background-color:aqua;
-}
+.immagine{
+     width: 200px;
+     height: 160px;
+     background-size:cover;
+     color:white;
+     margin: 10px;
+     padding: 10px;
+         }
 
-.azzurro {
-    background-color: lightblue;
+#monitor {
+          background-image: url(../img/monitor.jpg);
+         }
+
+#grafico {
+    background-image: url(../img/graph.jpg);
+         }
+
+/* bonus */
+.container {
+            width: 1200px;
+            margin : 0 auto;
 }
