--- a/file.css
+++ b/file.css
@@ -7,7 +7,7 @@
 /* header */
 header{
     height: 100px;
-    background-image: url("../img/pattern.png");
+    background-image: url("./img/pattern.png");
     background-color: lightskyblue;
     background-size: 30%;
       }
@@ -62,10 +62,6 @@ thead{
         background-color: lightskyblue;
          }
 
-.testo{
-    width: 50%;
-      }
-
 /* footer */
 
 footer {
@@ -82,11 +78,11 @@ footer {
          }
 
 #monitor {
-          background-image: url(../img/monitor.jpg);
+          background-image: url("./img/monitor.jpg");
          }
 
 #grafico {
-    background-image: url(../img/graph.jpg);
+    background-image: url("./img/graph.jpg");
          }
 
 /* bonus */
